force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/ChargeOver_Subscription_Line_Item__c.object-meta.xml
<CustomObject>
    <label>ChargeOver Subscription Line Item</label>
    <nameField>
        <label>ChargeOver Subscription Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChargeOver Subscription Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>