force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Active_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Active Subscription</label>
    <referenceTo>Active_Subscriptions__c</referenceTo>
    <relationshipLabel>ChargeOver Subscription Line Items</relationshipLabel>
    <relationshipName>ChargeOver_Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>