force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Active_Subscription_Line__c.field-meta.xml
<CustomField>
    <fullName>Active_Subscription_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Subscription Line</label>
    <referenceTo>Active_Subscription_Line__c</referenceTo>
    <relationshipLabel>ChargeOver Subscription Line Items</relationshipLabel>
    <relationshipName>ChargeOver_Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>