force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Applied_Account__c.field-meta.xml
<CustomField>
    <fullName>Applied_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ChargeOver Subscription Line Items (Applied Account)</relationshipLabel>
    <relationshipName>ChargeOver_Subscription_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>