force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/At_Risk_Future_Revenue__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Future_Revenue__c</fullName>
    <description>The potential revenue that is at-risk due to the client&apos;s past due invoices for this particular Subscription Line</description>
    <inlineHelpText>The potential revenue that is at-risk due to the client&apos;s past due invoices for this particular Subscription Line</inlineHelpText>
    <label>At-Risk Future Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>