force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Cancel_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date_Time__c</fullName>
    <label>Cancel Date/Time</label>
    <type>DateTime</type>
</CustomField>