force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Cancellation_Case_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Case_Processed_Date__c</fullName>
    <description>The date that a cancellation case was first processed for the client</description>
    <inlineHelpText>The date that a cancellation case was first processed for the client using the At-Risk Subscription Lines process</inlineHelpText>
    <label>Cancellation Case Processed Date</label>
    <type>DateTime</type>
</CustomField>