force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/ChargeOver_Subscription__c.field-meta.xml
<CustomField>
    <fullName>ChargeOver_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ChargeOver Subscription</label>
    <referenceTo>ChargeOver_Subscription__c</referenceTo>
    <relationshipLabel>ChargeOver Subscription Line Items</relationshipLabel>
    <relationshipName>ChargeOver_Subscription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>