force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Expire_Recurs__c.field-meta.xml
<CustomField>
    <fullName>Expire_Recurs__c</fullName>
    <label># of times this should recur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>