force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Historical_Update__c.field-meta.xml
<CustomField>
    <fullName>Historical_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger mass updates.</description>
    <label>Historical Update</label>
    <type>Checkbox</type>
</CustomField>