force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/LAST_SOURCE__c.field-meta.xml
<CustomField>
    <fullName>LAST_SOURCE__c</fullName>
    <description>INTERNAL SYNC - do not edit manually</description>
    <label>Last Source</label>
    <length>32</length>
    <type>Text</type>
</CustomField>