force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>ChargeOver Subscription Line ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>