force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/of_Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Past_Due__c</fullName>
    <description>The number of days that the oldest related Invoice Line is Past Due</description>
    <formula>TODAY() - Oldest_Overdue_Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days that the oldest related Invoice Line is Past Due</inlineHelpText>
    <label># of Days Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>