force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Oldest_Overdue_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Overdue_Due_Date__c</fullName>
    <description>The Due Date of the related invoice where the Status is Overdue and has the oldest Due Date. Used to help calculate how many days a line item is overdue so we can shut off services.</description>
    <label>Oldest Overdue Due Date</label>
    <type>Date</type>
</CustomField>