force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Paused_Date__c.field-meta.xml
<CustomField>
    <fullName>Paused_Date__c</fullName>
    <description>The date a subscription was marked as Suspended/Paused</description>
    <label>Paused Date</label>
    <type>Date</type>
</CustomField>