force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <type>TextArea</type>
</CustomField>