force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Refund_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Refund_Percentage__c</fullName>
    <formula>IF( AND( NOT(ISBLANK(Cancel_Date_Time__c)),  Total_Paid_Amount__c = 0 ),
    1,
    ((-1* Total_Refund_Amount__c )/ Total_Paid_Amount__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Percentage</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>