force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Sales_Source__c.field-meta.xml
<CustomField>
    <fullName>Sales_Source__c</fullName>
    <label>Sales Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>