force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <description>The Service End Date of the most recent invoice line item</description>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>