force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Sold_in_Offer__c.field-meta.xml
<CustomField>
    <fullName>Sold_in_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sold in Offer</label>
    <type>Checkbox</type>
</CustomField>