force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Subscription_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Date__c</fullName>
    <label>Subscription Start Date</label>
    <type>DateTime</type>
</CustomField>