force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Total_Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Invoiced__c</fullName>
    <description>The total amount invoiced for this specific subscription line</description>
    <inlineHelpText>The total amount invoiced for this specific subscription line</inlineHelpText>
    <label>Total Amount Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>