force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Total_Initial_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Initial_Paid_Amount__c</fullName>
    <description>The total amount paid for all related invoice lines of the ChargeOver Subscription where the Payment Type is Initial</description>
    <label>Total Initial Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>