force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Total_Invoiced_Amount_from_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoiced_Amount_from_Subscription__c</fullName>
    <formula>ChargeOver_Subscription__r.Total_Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoiced Amount from Subscription</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>