force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <description>The total amount of successful payment transactions that have been applied to this subscription line</description>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>