force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/TriggerFromChargeOverFlag__c.field-meta.xml
<CustomField>
    <fullName>TriggerFromChargeOverFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TriggerFromChargeOverFlag</label>
    <type>Checkbox</type>
</CustomField>