force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Write_Off_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Paid_Amount__c</fullName>
    <description>The amount of the subscription line’s related Invoice Lines that were paid by a write-off</description>
    <inlineHelpText>The amount of the subscription line’s related Invoice Lines that were paid by a write-off</inlineHelpText>
    <label>Write-Off Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>