force-app/main/default/objects/ChargeOver_Subscription_Line_Item__c/fields/Write_Off_Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Write_Off_Paid_Percentage__c</fullName>
    <description>Amount of the Subscription Line’s related Invoice Line&apos;s related Transactions that were paid by Write-off versus an actual payment</description>
    <formula>Write_Off_Paid_Amount__c/ Total_Amount_Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of the Subscription Line’s related Invoice Line&apos;s related Transactions that were paid by Write-off versus an actual payment</inlineHelpText>
    <label>Write-Off Paid Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>